--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and publish imswitch images
+name: Build and publish imswitch images  workflow_dispatch:
 
 permissions:
   contents: write
@@ -6,6 +6,8 @@ permissions:
 on:
   release:
     types: [published]
+  workflow_dispatch:
+
 
 jobs:
   build-imswitch-image:
