upgrading pi-gen file

--- a/HIK/dockerfile
+++ b/HIK/dockerfile
@@ -1,58 +1,55 @@
-# Use an appropriate base image for Jetson Nano
-# sudo docker build -t docker_hik .
-# sudo docker run -it --privileged docker_hik
-# docker stop docker_hik
-# sudo docker inspect docker_hik
-# sudo docker run --privileged -it docker_hik
-# performs python3 /opt/MVS/Samples/aarch64/Python/MvImport/GrabImage.py
+# For multi-architecture builds (requires docker buildx)
+# docker buildx create --use
+# docker buildx build --platform linux/arm64,linux/amd64 -t docker_hik --load .
 
+# Or, if building on a native system:
+# docker build -t docker_hik .
+# docker run --privileged -it docker_hik
 
-# cd /tmp 
-# wget https://www.hikrobotics.com/cn2/source/support/software/MVS_STD_GML_V2.1.2_231116.zip 
-# unzip MVS_STD_GML_V2.1.2_231116.zip 
-# sudo dpkg -i MVS-2.1.2_aarch64_20231116.deb
-# cd /opt/MVS/Samples/aarch64/Python/
-# cp GrabImage/GrabImage.py MvImport/GrabImage.py
-# export MVCAM_COMMON_RUNENV=/opt/MVS/lib 
-# export LD_LIBRARY_PATH=/opt/MVS/lib/64:/opt/MVS/lib/32:$LD_LIBRARY_PATH 
-# python3 /opt/MVS/Samples/aarch64/Python/MvImport/GrabImage.py
-    
+# syntax=docker/dockerfile:1
+#ARG TARGETPLATFORM=linux/arm64
+ARG TARGETPLATFORM=linux/amd64
+FROM --platform=$TARGETPLATFORM ubuntu:22.04
 
-#
-FROM --platform=linux/arm64/v8 ubuntu:22.04
-
-# Install necessary dependencies
 RUN apt-get update && apt-get install -y \
     wget \
     unzip \
     python3 \
     python3-pip \
-    && rm -rf /var/lib/apt/lists/*
-
-
-RUN cd /tmp && \
-    wget https://www.hikrobotics.com/cn2/source/support/software/MVS_STD_GML_V2.1.2_231116.zip && \
-    unzip MVS_STD_GML_V2.1.2_231116.zip && \
-    dpkg -i MVS-2.1.2_aarch64_20231116.deb
+    usbutils
 
 RUN mkdir -p /opt/MVS/bin/fonts
-# Source the bashrc file
-#RUN echo "source ~/.bashrc" >> ~/.bashrc
-RUN /bin/bash -c "source ~/.bashrc"
 
-# Copy the necessary Python script
-RUN cd /opt/MVS/Samples/aarch64/Python/ && \
-    cp GrabImage/GrabImage.py MvImport/GrabImage.py
+RUN cd /tmp && \
+        wget https://www.hikrobotics.com/cn2/source/support/software/MVS_STD_GML_V2.1.2_231116.zip && \
+        unzip MVS_STD_GML_V2.1.2_231116.zip && \
+        if [ "${TARGETPLATFORM}" = "linux/arm64" ]; then \
+            dpkg -i MVS-2.1.2_aarch64_20231116.deb; \
+        elif [ "${TARGETPLATFORM}" = "linux/amd64" ]; then \
+            tar -xzvf MVS-2.1.2_x86_64_20231116.tar.gz && \
+            cd MVS-2.1.2_x86_64_20231116 && \
+            tar -xzvf MVS.tar.gz && \
+            bash setup.sh; \
+        fi
+    
 
-# Set environment variable for MVCAM_COMMON_RUNENV
-#ENV MVCAM_COMMON_RUNENV=/opt/MVS
-ENV MVCAM_COMMON_RUNENV=/opt/MVS/lib LD_LIBRARY_PATH=/opt/MVS/lib/64:/opt/MVS/lib/32:$LD_LIBRARY_PATH 
+    
+RUN if [ "${TARGETPLATFORM}" = "linux/arm64" ]; then \
+    cd /opt/MVS/Samples/aarch64/Python/ && \
+    cp GrabImage/GrabImage.py MvImport/GrabImage.py; \
+elif [ "${TARGETPLATFORM}" = "linux/amd64" ]; then \
+    cd /opt/MVS/Samples/64/Python/ && \
+    cp GrabImage/GrabImage.py MvImport/GrabImage.py; \
+fi
 
-# print lsusb
-RUN apt-get update && apt-get install -y usbutils && echo "lsusb" && lsusb
+ENV MVCAM_COMMON_RUNENV=/opt/MVS/lib
+ENV LD_LIBRARY_PATH=/opt/MVS/lib/64:/opt/MVS/lib/32:$LD_LIBRARY_PATH
 
-# Run the Python script
-#CMD ["python3", "/opt/MVS/Samples/aarch64/Python/MvImport/GrabImage.py"]
-CMD lsusb && python3 /opt/MVS/Samples/aarch64/Python/MvImport/GrabImage.py
-# Start an interactive shell
-#CMD ["/bin/bash"]
+# Copy the entrypoint script into the image
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+RUN tar -xzvf /tmp/MVS-3.0.1_x86_64_20240902
+
+CMD exec bash
+# CMD ["/entrypoint.sh"]
