--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,38 @@ jobs:
           # 4. Install basic tools needed for downloading & unzipping
           # ----------------------------------------------------------------------------
           apt-get update
-          apt-get install -y git nano python3-pip wget unzip
+          apt-get install -y git nano python3-pip wget unzip ntpdate
+
+          # install docker
+          ntpdate pool.ntp.org
+
+          # Check if Docker is installed
+          if ! command -v docker &> /dev/null
+          then
+              echo "Docker is not installed. Installing Docker..."
+              # Install Docker
+              curl -sSL https://get.docker.com | sh
+
+              # Add current user to the Docker group
+              sudo usermod -aG docker $USER
+
+              # Print message to logout and login again
+              echo "Please log out and log back in to apply the Docker group changes."
+          else
+              echo "Docker is already installed. Skipping installation."
+          fi
+
+          # install raspap
+          curl -sL https://install.raspap.com | bash -s -- --yes --wireguard 0 --adblock 0 --openvpn 0 --restapi 1 --update
+
+          # Generate your custom SSID with random digits
+          SSID="openUC2-$(tr -dc 0-9 < /dev/urandom | head -c 6)"
+          echo "Using SSID: $SSID"
+
+          # Update hostapd settings with new SSID and pass
+          sudo sed -i "s/^ssid=.*/ssid=$SSID/g" /etc/hostapd/hostapd.conf
+          sudo sed -i "s/^wpa_passphrase=.*/wpa_passphrase=youseetoo/g" /etc/hostapd/hostapd.conf
+
 
           # ----------------------------------------------------------------------------
           # 5. Download camera driver files into /opt/camera-drivers
@@ -157,7 +188,7 @@ jobs:
           echo 'export LD_LIBRARY_PATH=/usr/lib:'$DRIVER_DIR'/Galaxy_Linux-armhf_Gige-U3_32bits-64bits_1.5.2303.9202:$LD_LIBRARY_PATH' >> /etc/profile
 
           # Install extra Python packages
-          pip3 install pillow numpy
+          pip3 install --break-system-packages pillow numpy
 
           # ---------------------------------------
           # Create Desktop for user 'pi'
