--- a/compose.yaml
+++ b/compose.yaml
@@ -3,31 +3,27 @@
 # docker pull ghcr.io/openuc2/imswitch-docker-arm64-noqt:latest
 # docker run -it ghcr.io/openuc2/imswitch-aiortc-react:latest
 # docker run -it --rm -p 8001:8001 -p 2222:22 -e HEADLESS=1 -e HTTP_PORT=8001 -e CONFIG_FILE=example_virtual_microscope.json -e UPDATE_GIT=1 -e UPDATE_CONFIG=0 ghcr.io/openuc2/imswitch-docker-arm64-noqt:latest 
-version: '3.8'
-
 services:
-  imswitch-aiortc-react:
-    image: ghcr.io/openuc2/imswitch-aiortc-react:latest
-    ports:
-      - "3000:3000"
-      - "8002:8001"
-    environment:
-      - NODE_ENV=production
-    stdin_open: true
-    tty: true
-
   imswitch-docker-arm64-noqt:
-    image: ghcr.io/openuc2/imswitch-docker-arm64-noqt:latest
+    image: ghcr.io/openuc2/imswitch-noqt-arm64:latest    
     privileged: true
     ports:
+      - "3000:3000"
+      - "8002:8002"
       - "8001:8001"
-      - "2222:22"
+      - "8888:8888"
+      - "2222:22"      
+    volumes:
+      - ~/Downloads:/config 
+      - ~/Downloads:/dataset 
     environment:
       - HEADLESS=1
       - HTTP_PORT=8001
       - CONFIG_FILE=example_virtual_microscope.json
       - UPDATE_GIT=1
       - UPDATE_CONFIG=0
+      - DATA_PATH=/dataset
+      - CONFIG_PATH=/config
     stdin_open: true
     tty: true
     restart: always
