--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
           # install raspap
           export TERM=xterm
           apt-get update -y && apt-get install -y curl dhcpcd5 iptables procps whiptail # (for the two lines)
-          curl -sL https://install.raspap.com | bash -s -- --yes --wireguard 0 --adblock 0 --openvpn 0 --restapi 1 --update
+          curl -sL https://install.raspap.com | bash -s -- --yes --wireguard 0 --adblock 0 --openvpn 0 --restapi 1 --update --check 0
 
           # Generate your custom SSID with random digits
           SSID="openUC2-$(tr -dc 0-9 < /dev/urandom | head -c 6)"
