--- a/VIMBA/dockerfile
+++ b/VIMBA/dockerfile
@@ -19,27 +19,40 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Install VmbPy from PyPI (fallback for when full SDK cannot be downloaded)
-# This provides basic VimbaX functionality
-RUN python3 -m pip install --upgrade pip --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org \
-    && pip3 install vmbpy --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org --no-cache-dir
+# Copy pre-downloaded VimbaX SDK (requires manual download due to network restrictions)
+# To use this dockerfile:
+# 1. Download VimbaX_Setup-2025-1-Linux_ARM64.tar.gz from:
+#    https://downloads.alliedvision.com/VimbaX/VimbaX_Setup-2025-1-Linux_ARM64.tar.gz
+# 2. Place it in the same directory as this dockerfile
+# 3. Build with: docker build -f dockerfile.full-sdk -t alvium:vimbax-full .
+RUN wget --no-check-certificate https://downloads.alliedvision.com/VimbaX/VimbaX_Setup-2025-1-Linux_ARM64.tar.gz -O VimbaX_Setup-2025-1-Linux_ARM64.tar.gz || \
+    echo "VimbaX SDK download failed. Please ensure the file is present in the build context."
+# COPY VimbaX_Setup-2025-1-Linux_ARM64.tar.gz .
+
+# Extract and install VimbaX SDK
+RUN tar -xzf VimbaX_Setup-2025-1-Linux_ARM64.tar.gz -C /opt \
+    && mv /opt/VimbaX_2025-1 /opt/VimbaX \
+    && rm VimbaX_Setup-2025-1-Linux_ARM64.tar.gz
+
+# Run VimbaX GenTL installation script
+WORKDIR /opt/VimbaX/cti
+RUN ./Install_GenTL_Path.sh
+
+# Install VmbPy from the included wheel file
+WORKDIR /opt/VimbaX/api/python
+RUN python3 -m pip install --upgrade pip --no-cache-dir \
+    && find . -name "vmbpy-*.whl" -exec pip3 install {} --no-cache-dir \;
 
 # Set environment variables for VimbaX
-# Note: Full SDK installation would set GENICAM_GENTL64_PATH to /opt/VimbaX/cti
-# For now, this is left empty as PyPI VmbPy includes basic transport layers
-ENV GENICAM_GENTL64_PATH=""
+ENV GENICAM_GENTL64_PATH="/opt/VimbaX/cti"
 
 # Copy our test script
 COPY list_cameras.py ${WORKSPACE_PATH}/
 
-# Create a note about the installation type
-RUN echo "VmbPy (PyPI version) installed" > /opt/vimba/installation_info.txt && \
-    echo "For full VimbaX SDK with transport layers:" >> /opt/vimba/installation_info.txt && \
-    echo "1. Download VimbaX_Setup-2025-1-Linux_ARM64.tar.gz" >> /opt/vimba/installation_info.txt && \
-    echo "2. Extract to /opt/VimbaX" >> /opt/vimba/installation_info.txt && \
-    echo "3. Run /opt/VimbaX/cti/Install_GenTL_Path.sh" >> /opt/vimba/installation_info.txt && \
-    echo "4. Install VmbPy from /opt/VimbaX/api/python" >> /opt/vimba/installation_info.txt && \
-    echo "5. Set GENICAM_GENTL64_PATH=/opt/VimbaX/cti" >> /opt/vimba/installation_info.txt
+# Create installation info
+RUN echo "Full VimbaX SDK installed" > /opt/vimba/installation_info.txt && \
+    echo "GenTL Path: /opt/VimbaX/cti" >> /opt/vimba/installation_info.txt && \
+    echo "VmbPy installed from SDK wheel" >> /opt/vimba/installation_info.txt
 
 # Set workspace as the default working directory
 WORKDIR ${WORKSPACE_PATH}
