Add multi-arch Docker support and update docs/scripts
Updated all Docker-related scripts and documentation to automatically detect and use the correct architecture (ARM64 or AMD64) for Docker images. Added a docker-compose.sh helper script for architecture-aware Docker Compose usage. Updated compose.yaml and desktop icon scripts to use the new architecture variable. Improved README with clearer multi-architecture instructions and usage examples.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -205,7 +205,8 @@ jobs:
           # Create Docker scripts
           cat << 'SCRIPT1' > "$DESKTOP_PATH/update_docker_container.sh"
           #!/bin/bash
-          sudo docker pull ghcr.io/openuc2/imswitch-noqt-arm64:latest
+          ARCH=$(uname -m | sed 's/aarch64/arm64/; s/x86_64/amd64/')
+          sudo docker pull ghcr.io/openuc2/imswitch-noqt-$ARCH:latest
           SCRIPT1
 
           cat << 'SCRIPT2' > "$DESKTOP_PATH/launch_docker_container.sh"
@@ -222,7 +223,7 @@ jobs:
             -e HTTP_PORT=8001 \
             -e UPDATE_INSTALL_GIT=0 \
             -e UPDATE_CONFIG=0 \
-            --privileged ghcr.io/openuc2/imswitch-noqt-arm64:latest
+            --privileged ghcr.io/openuc2/imswitch-noqt-$(uname -m | sed 's/aarch64/arm64/; s/x86_64/amd64/'):latest
           SCRIPT2
 
           chmod +x "$DESKTOP_PATH/"*.sh
