--- a/compose.yaml
+++ b/compose.yaml
@@ -4,8 +4,8 @@
 # docker run -it ghcr.io/openuc2/imswitch-aiortc-react:latest
 # docker run -it --rm -p 8001:8001 -p 2222:22 -e HEADLESS=1 -e HTTP_PORT=8001 -e CONFIG_FILE=example_virtual_microscope.json -e UPDATE_GIT=1 -e UPDATE_CONFIG=0 ghcr.io/openuc2/imswitch-docker-arm64-noqt:latest 
 services:
-  imswitch-docker-arm64-noqt:
-    image: ghcr.io/openuc2/imswitch-noqt-arm64:latest    
+  imswitch-docker-noqt:
+    image: ghcr.io/openuc2/imswitch-noqt-${ARCH:-arm64}:latest    
     privileged: true
     ports:
       - "3000:3000"
