updating tucsen interface

--- a/TUCAM/tuusb.conf
+++ b/TUCAM/tuusb.conf
@@ -38,33 +38,39 @@ PIDFile=tuusbd.pid
 5453  6804          Dhyana 400DC
 5453  EC03          Dhyana 400DC
 5453  E406          Dhyana 400BSI
-5453  E408	    Dhyana 400BSI V2
-5453  E40D	    FL-20BW
-5453  E40E	    Dhyana 4040
-5453  E40F	    Dhyana 95V2
-5453  E005	    Dhyana 401D
-5453  E007	    Dhyana 201D
+5453  E408          Dhyana 400BSI V2
+5453  EC07          MIchrome 5 Pro
+5453  EC09          MIchrome 6 
+5453  EC0E          MIchrome 16
+5453  EC0B          MIchrome 20
+5453  E407          MIchrome 3BW
+5453  E409          MIchrome 5BW   
 
-5453  E412	    Dhyana 4040V2
-5453  E413	    Dhyana 4040BSI
-5453  E41B	    Dhyana XFXV4040BSI
-5453  E419	    Dhyana 400BSIV3
+5453  EC0D          FL-20
+5453  E40D          FL-20BW   
+
+5453  E40E          Dhyana 4040
+5453  E40F          Dhyana 95V2
+5453  E005          Dhyana 401D
+5453  E007          Dhyana 201D
+
+5453  E412          Dhyana 4040V2
+5453  E413          Dhyana 4040BSI
+5453  E41B          Dhyana XF4040BSI
+5453  E419          Dhyana 400BSIV3
 5453  E41F	    Dhyana XFXV95
 5453  E420	    Dhyana XFXV400BSI
-
-5453  2A01	    DigiRetina16
-
-5453  A807	    ISH300
-5453  A804          ISH500
-5453  A803          ISH1000
-
+5453  2A01          DigiRetina16
 5453  E422	    FL 9BW
 5453  E426          FL 9BWLT
 5453  E423          FL 26BW
 5453  E424          ARIES 16 LT
 5453  E425          ARIES 16
 
+5453  A807          ISH300
+5453  A804          ISH500
+5453  A803          ISH1000
+
 0547  A008          ISH130
-0547  E004          ISH205M
 
 </VPD>
