--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@
 # docker run -it --rm -p 8001:8001 -p 2222:22 -e HEADLESS=1 -e HTTP_PORT=8001 -e CONFIG_FILE=example_virtual_microscope.json -e UPDATE_GIT=1 -e UPDATE_CONFIG=0 ghcr.io/openuc2/imswitch-docker-arm64-noqt:latest 
 services:
   imswitch-docker-noqt:
-    image: ghcr.io/openuc2/imswitch-noqt-${ARCH:-arm64}:latest    
+    image: ghcr.io/openuc2/imswitch-noqt:latest    
     privileged: true
     ports:
       - "3000:3000"
