--- a/VIMBA/dockerfile
+++ b/VIMBA/dockerfile
@@ -25,7 +25,7 @@ RUN apt-get update && apt-get install -y \
 #    https://downloads.alliedvision.com/VimbaX/VimbaX_Setup-2025-1-Linux_ARM64.tar.gz
 # 2. Place it in the same directory as this dockerfile
 # 3. Build with: docker build -f dockerfile.full-sdk -t alvium:vimbax-full .
-RUN wget --no-check-certificate https://downloads.alliedvision.com/VimbaX/VimbaX_Setup-2025-1-Linux_ARM64.tar.gz -O VimbaX_Setup-2025-1-Linux_ARM64.tar.gz || \
+RUN wget --no-check-certificate https://github.com/openUC2/ImSwitchDockerInstall/releases/download/imswitch-master/VimbaX_Setup-2025-1-Linux_ARM64.tar.gz -O VimbaX_Setup-2025-1-Linux_ARM64.tar.gz || \
     echo "VimbaX SDK download failed. Please ensure the file is present in the build context."
 # COPY VimbaX_Setup-2025-1-Linux_ARM64.tar.gz .
 
